Smart Lock: Remove unnecessary and incorrect call to DeviceSyncClient.

Remove call to DeviceSyncClient::GetSyncedDevices() in
EasyUnlockServiceRegular. This call was incorrect because it didn't
wait for DeviceSyncClient::Observer::OnReady(), but is also
unnecessary because EasyUnlockServiceRegular's override of OnReady()
will call GetSyncedDevices() anyway.

This CL also puts back DCHECKs within DeviceSyncClient which were
removed in [1]. These DCHECKs should remain present to continue
catching incorrect calls such as this one.

1) https://chromium-review.googlesource.com/c/chromium/src/+/1195931

R=jhawkins@chromium.org, khorimoto@chromium.org

Bug: 878653
Change-Id: Ib13668063be89b3856076c1476cb853215f12f22
Reviewed-on: https://chromium-review.googlesource.com/1218342
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Reviewed-by: James Hawkins <jhawkins@chromium.org>
Commit-Queue: Ryan Hansberry <hansberry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591835}
Former-commit-id: 196454e3fde49ffea3b580a520a8778e2133982c